# pivx-rust-sdk

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: FEATURES.md  deployment.md  usage.md
rpc/: Cargo.toml  README.md
rpc/examples/: send_shielded.rs  watch_shield_balance.rs
rpc/src/: client.rs  lib.rs  shield.rs  types.rs  zmq.rs
rpc/tests/: client.rs
wallet/: Cargo.toml  LICENSE  README.md
wallet/examples/: deposit_watcher.rs  send_standalone.rs
wallet/src/: checkpoint.rs  error.rs  keys.rs  lib.rs  prover.rs  test_fixtures.rs  tests.rs  transaction.rs  transparent.rs  transparent_tx.rs  transparent_wallet.rs  wallet.rs
