[package]
name = "pivx-rpc"
version = "0.1.0"
edition = "2021"
description = "PIVX SDK: typed JSON-RPC client with shielded (SHIELD/Sapling) balance watching and transaction support"
license = "MIT"
repository = "https://github.com/PIVX-Project/pivx-sdk"
keywords = ["pivx", "rpc", "sapling", "shield", "blockchain"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
