[package]
name = "pivx-rpc"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "PIVX SDK: typed JSON-RPC client with shielded (SHIELD/Sapling) balance watching and transaction support"
license = "MIT"
repository = "https://github.com/Liquid369/pivx-rust-sdk"
readme = "README.md"
keywords = ["pivx", "rpc", "sapling", "shield", "blockchain"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: serialize request JSON object keys in declaration order for
# cross-SDK (Rust/JS) wire parity.
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
